deploy: 6921a996794c2e3f937feffb6fb3d9bfe726806d

--- a/projects/nri/update2.html
+++ b/projects/nri/update2.html
@@ -790,7 +790,7 @@
 <li><p>To plot the given data into a 3D Scatter plot, with Kinship2 coefficients on the x-axis, King coefficients on the y-axis, and Plink coefficients on the z-axis</p>
 <ul>
 <li><p>Since Kinship2 is the recorded information on the pedigrees, they are put into the x-axis, and differences between the King and Plink coefficients can be plotted</p></li>
-<li><p>If the recorded pedigree was correct, the scatter plot would feature all points on a line such that $<span class="math notranslate nohighlight">\(x=y=z\)</span>$</p></li>
+<li><p>If the recorded pedigree was correct, the scatter plot would feature all points on a line such that <span class="math notranslate nohighlight">\(x=y=z\)</span></p></li>
 </ul>
 </li>
 </ul>
@@ -809,7 +809,7 @@
 <p><img alt="" src="../../_images/pairplot-I416T.png" /></p>
 <p><strong>Figure 9. Pair Plot for Relatedness</strong></p>
 <p>The bar plots on the diagonal is a distribution of plink, king, and kinship values. The other graph is ploting two values against each other.
-We expect all the scatter plots to look like $<span class="math notranslate nohighlight">\(y=x\)</span>$</p>
+We expect all the scatter plots to look like <span class="math notranslate nohighlight">\(y=x\)</span></p>
 <p>Key findings:</p>
 <ul class="simple">
 <li><p>Distribution of king is more similar to that of kinship than plink</p></li>
